--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -136,12 +136,12 @@ linter:
     # - prefer_function_declarations_over_variables # not yet tested
     - prefer_generic_function_type_aliases
     - prefer_initializing_formals
-    # - prefer_int_literals # not yet tested
+    - prefer_int_literals # not yet tested
     # - prefer_interpolation_to_compose_strings # not yet tested
     - prefer_is_empty
     - prefer_is_not_empty
     - prefer_iterable_whereType
-    # - prefer_mixin # https://github.com/dart-lang/language/issues/32
+    - prefer_mixin # https://github.com/dart-lang/language/issues/32
     - prefer_single_quotes
     - prefer_typing_uninitialized_variables
     - prefer_void_to_null
