--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  shared_preferences: ^0.5.1+1
+  json_serializable: ^2.0.2
 
 dev_dependencies:
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.2
+
   flutter_test:
     sdk: flutter
 
